# arbot_Arduino_Pi

./: README.md  ROS_compile
CU/devel/: .catkin  local_setup.sh
CU/devel/include/beginner_tutorials/: AddTwoIntsRequest.h
CU/devel/lib/beginner_tutorials/: listener  talker
CU/devel/lib/pkgconfig/: beginner_tutorials.pc
CU/install/: local_setup.sh  setup.sh
CU/install/include/beginner_tutorials/: AddTwoIntsResponse.h  Num.h
CU/src/beginner_tutorials/: CMakeLists.txt  package.xml
CU/src/beginner_tutorials/launch/: talker_listener.launch
CU/src/beginner_tutorials/src/: helloworld.cu  helloworld.cuh  talker.cpp
ODRIVE/: 3_10_19_00.json  3_8_20_30.json  3_9_19_55.json  Feb_27_19_49.txt  ISRODrive.py  ISR_angle.py  ISR_test.py  Subscribe_ODrive.py  angle_gen.py  arbot.py  hov1_02_27.json  hover_1.json  odrive_control.py  odrv0_hov1.json  odrv0_hov1_tuned.json  plot_ODrive.m  test.py  txt_to_odrive.py
ROS/: listener.cpp  ser.c  ser.py  talker.cpp
TE_cts_servo_v0/: TE_cts_servo_v0.ino
catkin_ws/catkin_ws/devel/: .catkin  .rosinstall
catkin_ws/catkin_ws/install/: .rosinstall
catkin_ws/catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/devel/include/beginner_tutorials/: AddTwoIntsRequest.h  Num.h
catkin_ws/install/: _setup_util.py  local_setup.sh
catkin_ws/src/beginner_tutorials/: CMakeLists.txt
dev_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dev_ws/log/: latest_build
test_bldc_0/: test_bldc_0.ino
test_encoder/: test_encoder.ino
test_encoderv1/: test_encoderv1.ino
(+38 files in other folders)
